--- a/Documents/projects/facebook/index.html
+++ b/Documents/projects/facebook/index.html
@@ -34,5 +34,45 @@
             </ul>
         </nav>
       </header>
+      <section class="seredina">
+        <div class="lenta">
+          <div class="znacki" id="imja"><img src="icons/user.png" class="usericon"> Имя Фамилия </div>
+          <div class="znacki" id="novosti"><img src="icons/news.png" class="usericon"> Лента Новостей </div>
+          <div class="znacki"><img src="icons/email.png" class="usericon"> Messanger </div>
+          <div class="znacki"><img src="icons/monitor.png" class="usericon"> Watch </div>
+          <div class="znacki"><img src="icons/shop.png" class="usericon"> Marketplace </div>
+        </div>
+        <div class="publ">
+          <div class="per">
+            <div id="vverh"><p id="vverh1">Создайте публикацию<p></div>
+            <div id="sser"><img src="icons/user.png" id="whats"><p>Что у Вас нового, user?</p></div>
+            <div id="niz">
+              <div class="container"><img src="icons/image.png" class="op"><p>Фотo/видео</p></div>
+              <div class="container"><img src="icons/addfr.png" class="op"><p>Отметить др...</p></div>
+              <div class="container"><img src="icons/smiling.png" class="op"><p>Чувства/дей...</p></div>
+              <div class="container"><img src="icons/dots.png" class="op"></div>
+            </div>
+          </div>
+          <div class="istorii">
+            <div id="is1">
+              <p>Истории</p>
+              <p>Все</p>
+            </div>
+            <div id="is2">
+              <div class="story">
+              </div>
+              <div class="story">
+              </div>
+              <div class="story">
+              </div>
+              <div class="story">
+              </div>
+            </div>
+        </div>
+        </div>
+        <div class="pravo">
+          <div id="ctoto"></div>
+        </div>
+      </section>
   </body>
 </html>
