--- a/index.html
+++ b/index.html
@@ -69,6 +69,38 @@
               </div>
             </div>
         </div>
+        <div class="posti_verh">
+          <img src="icons/user.png" class="dla_postov">
+          <img src="icons/dots.png" class="tocki">
+          <p> User's name<p>
+        </div>
+        <div class="posti_nizhe">
+          <p> Новые видео - уроки по HTML CSS</p>
+        </div>
+        <div class="posti_seredina">
+          <iframe width="498" height="315" src="https://www.youtube.com/embed/InSenLOKtSQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="posti_niz">
+          <div class="cont_likes"><img src="icons/like.png" class="likes_photo"> <p>Нравится</p></div>
+          <div class="cont_likes"><img src="icons/chat.png" class="likes_photo"><p>Комментировать </p></div>
+          <div class="cont_likes"><img src="icons/share.png" class="likes_photo"><p>Поделиться </p></div>
+        </div>
+        <div class="posti_verh">
+          <img src="icons/user.png" class="dla_postov">
+          <img src="icons/dots.png" class="tocki">
+          <p> User's name<p>
+        </div>
+        <div class="posti_nizhe">
+          <p> Оцените мою новую фотографию! </p>
+        </div>
+        <div class="posti_seredina">
+          <img style="width: 498px;"src="icons/cat.jpeg">
+        </div>
+        <div class="posti_niz">
+          <div class="cont_likes"><img src="icons/like.png" class="likes_photo"> <p>Нравится</p></div>
+          <div class="cont_likes"><img src="icons/chat.png" class="likes_photo"><p>Комментировать </p></div>
+          <div class="cont_likes"><img src="icons/share.png" class="likes_photo"><p>Поделиться </p></div>
+        </div>
         </div>
         <div class="pravo">
           <div id="ctoto"></div>
