--- a/index.html
+++ b/index.html
@@ -103,7 +103,46 @@
         </div>
         </div>
         <div class="pravo">
-          <div id="ctoto"></div>
+          <div id="ctoto">
+            <div><p>Ваша страница</p></div>
+            <div id="sss"><img src="icons/dots.png"></div>
+        </div>
+        <div id="pravo_nizhe">
+          <div><img src="icons/user.png" id="pravo_nizhe_icon"></div>
+          <div id="stranica">
+            <div class="ll"><p>Название вашей страницы<p></div>
+            <div class="ll"><img src="icons/speech-bubble.png" class="znaki_str"><p>Сообщения</p></div>
+            <div class="ll"><img src="icons/earth.png" class="znaki_str"><p>Уведомления</p></div>
+          </div>
+        </div>
+        <div id="knopki">
+          <ul>
+            <li>
+              <ul>
+                <li> <img src="icons/edit.png" class="ooo"></li>
+                <li>Опубликовать</li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                <li> <img src="icons/photo-camera.png" class="ooo"></li>
+                <li>Фото</li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                <li> <img src="icons/live.png" class="ooo"></li>
+                <li>Прямой эфир</li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                <li> <img src="icons/follower.png" class="ooo"></li>
+                <li>Пригласить</li>
+              </ul>
+            </li>
+
+          </ul>
         </div>
       </section>
   </body>
